[package]
name = "brainfuck-interpreter"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bf"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0.23", features = [ "derive" ] }
brainfuck_lexer = { path = "./brainfuck_lexer" }

[features]
default = [ "comments" ]
comments = [ "brainfuck_lexer/comments" ]
debug_token = [ "brainfuck_lexer/debug_token" ]

[workspace]
members = [
    "brainfuck_lexer"
]
